--- a/views/courseDetail.html
+++ b/views/courseDetail.html
@@ -244,7 +244,7 @@
                 <div class="col-lg-3 col-xs-6 margin--t1">
                     <div class="col-xs-12 sidebar-bloqs2">
                         <div class="row sidebar-imageCurso">
-                            <img src="images/Google-Adwords.png" alt="" class="img-responsive center-block">
+                            <img src="images/googleAdw.jpg" alt="" class="img-responsive center-block">
                             <div class="col-xs-12 sidebar-imageCurso__nombre">
                                 <img src="images/avatar.jpg" alt="" class="img-circle sidebar-imageCurso__image">
                                 <span class="text text--blanco">
