--- a/views/footer.html
+++ b/views/footer.html
@@ -1,6 +1,6 @@
 <footer class="col-xs-12 sidebar-footer" ng-controller="footer">
     <div class="row">
-        <div class="col-xs-12 sidebar-footer__top" ng-show="subscription">
+        <div ng-if="false" class="col-xs-12 sidebar-footer__top" ng-show="subscription">
             <div class="container">
                 <p class="text text--lite text--md text-center">
                     Mantente al día de nuestros nuevos cursos, suscribete a nuestro newsletter
