--- a/css/main.css
+++ b/css/main.css
@@ -504,7 +504,7 @@ body{font-family:'Raleway',sans-serif;font-size:16px;margin:0;overflow-x:hidden;
 .sidebar-imageCurso{position:relative;}
 .sidebar-imageCurso__nombre{position:absolute;bottom:-1em}
 .sidebar-imageCurso__image{border:3px solid #5998c8;margin-right:.5em;width:70px; height:70px;}
-.sidebar-imageCurso__qualy{color:#fff;position:absolute;top:1em}
+.sidebar-imageCurso__qualy{color:#fff;position:absolute;top:1em; text-shadow: 1px 1px 6px #000;}
 .sidebar-add__montain{position:relative;}
 .sidebar-add__montain:after{background:url("../images/spoiler1-r.png") 0 0;bottom:-120px;content:'';display:block;height:176px;position:absolute;right:0;width:599px;z-index:1}
 .sidebar-add__montain:before{background:url("../images/spoiler1-l.png") 0 0;bottom:-119px;content:'';display:block;height:176px;position:absolute;left:0;width:599px;z-index:1}
@@ -770,7 +770,7 @@ body{font-family:'Raleway',sans-serif;font-size:16px;margin:0;overflow-x:hidden;
 .row-same-height{display:table;width:100%;table-layout:fixed}
 .col-xs-height{display:table-cell;float:none !important}
 
-.bg-nameTutor{background: rgba(0, 0, 0, 0.42); padding: 3px 25px;}
+.bg-nameTutor{background: rgba(0, 0, 0, 0.42); padding: 3px 8px;}
 .img-course {width:100%; height:158px;}
 
 @media (min-width: 768px){.col-sm-height{display:table-cell;float:none !important}
@@ -791,3 +791,7 @@ body{font-family:'Raleway',sans-serif;font-size:16px;margin:0;overflow-x:hidden;
 }@media screen and (max-width:992px){body{font-size:13px}
 }@media screen and (max-width:768px){body{font-size:12px}
 }
+
+/* nm */
+
+.textDescription {max-height: 50px; margin: 0 auto; overflow: hidden;}
