--- a/views/courseDetail.html
+++ b/views/courseDetail.html
@@ -27,7 +27,7 @@
             <h2 class="text text--azul_mid text--xxxlg text--xbold margin--b05 text-space1">
                 Acerca del Curso
             </h2>
-            <p class="text text--gris"> {{dataDetails.about}} </p>
+            <p class="text text--gris" id="courseAbout">{{about}}</p>
             <h3 class="text text--lg text--xbold margin--b1 text-space1 margin--t1">
                 Competencias a desarrollar:
             </h3>
