--- a/views/courseDetail.html
+++ b/views/courseDetail.html
@@ -11,7 +11,7 @@
             <p class="text text--md text--gris text-space1 margin--t1">
                 {{dataDetails.description}}
             </p>
-            <a href="#" class="btn btn--academy2 btn-rojo btn-xlg text--upper margin--t1 margin--b1" data-toggle="modal" data-target="#js-ingreso">
+            <a href="" class="btn btn--academy2 btn-rojo btn-xlg text--upper margin--t1 margin--b1" data-toggle="modal" data-target="#js-ingreso">
                  Inscríbete
             </a>
         </div>
