--- a/views/courses/blockMyCourses.html
+++ b/views/courses/blockMyCourses.html
@@ -32,8 +32,8 @@
 		<a href="" class="btn btn-verde btn-lg btn-regular"> comenzar clase </a>
 	</div>
 	<div class="col-xs-2 text-center">
-		<div class="c100 center p50 center-block">
-			<span>{{data.score}} %</span>
+		<div class="c100 center p{{data.sessions[0].score}} center-block">
+			<span>{{data.sessions[0].score}} %</span>
 			<div class="slice">
 				<div class="bar"></div>
 				<div class="fill"></div>
@@ -45,7 +45,7 @@
 		<p class="text text--lite text--gris margin--b0 margin--t2">
 			Horas de estudio:<br>
 			<span class="text--xbold">
-				{{data.time}} Horas
+				{{data.duration}} Horas
 			</span>
 		</p>
 	</div>
