--- a/views/courses/blockMyCourses.html
+++ b/views/courses/blockMyCourses.html
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 		<hr>
-		<a href="" class="btn btn-verde btn-lg btn-regular"> comenzar clase </a>
+		<a ng-href="#course/{{data.uuid}}/simple" class="btn btn-verde btn-lg btn-regular"> comenzar clase </a>
 	</div>
 	<div class="col-xs-2 text-center">
 		<div class="c100 center p{{data.sessions[0].score}} center-block">
