--- a/views/courses/blockMyCourses.html
+++ b/views/courses/blockMyCourses.html
@@ -31,6 +31,7 @@
 		</div>
 		<hr>
 		<a ng-href="#course/{{data.uuid}}/simple" class="btn btn-verde btn-lg btn-regular"> comenzar clase </a>
+		<a ng-href="#course/{{data.uuid}}/details" class="btn btn-info btn-lg btn-regular"> Detalles del curso </a>
 	</div>
 	<div class="col-xs-2 text-center">
 		<div class="c100 center p{{data.sessions[0].score}} center-block">
