--- a/views/courses/simpleCourse.html
+++ b/views/courses/simpleCourse.html
@@ -22,7 +22,7 @@
 
 <section class="">
 
-    <tabs-simple-course></tabs-simple-course>
+    <tabs-custom></tabs-custom>
     
     <div class="clearfix"></div>
 
