--- a/css/main.css
+++ b/css/main.css
@@ -796,5 +796,5 @@ body{font-family:'Raleway',sans-serif;font-size:16px;margin:0;overflow-x:hidden;
 
 .textDescription {max-height: 50px; margin: 0 auto; overflow: hidden;}
 .container-MyCourses { border: 1px solid #ccc; overflow: hidden; padding: 10px 0; border-radius: 10px; margin-top: 10px;}
-
-
+.menuTab li { display: block; padding: 1em; position: relative; text-decoration: none;}
+.menuTab li a { color: #626262; display: block; padding: 1em; position: relative; text-decoration: none;}
