--- a/views/courses/simpleCourse.html
+++ b/views/courses/simpleCourse.html
@@ -13,7 +13,7 @@
     </div>
 </section>
 
-<!-- Tabs Simple Courses -->
+<!-- Tabs Simple Courses  / ver directiva -->
 
-<tabs-custom></tabs-custom>
+<tabs-custom-vertical></tabs-custom-vertical>
 
