--- a/css/main.css
+++ b/css/main.css
@@ -802,9 +802,9 @@ body{font-family:'Raleway',sans-serif;font-size:16px;margin:0;overflow-x:hidden;
 .tabActive {background:#3874b8; color:#FFF !important;}
 .tabActive a {color:#FFF !important;}
 
-#tabModule ul.nav-tabs { width: 100%; border-bottom: 0;}
-#tabModule ul.nav-tabs li a { border: none; border-bottom: 3px solid #cbcbcb; color: #4f4f4f; font-weight: 700; text-align: left;}
-#tabModule ul.nav-tabs li a:hover { background:#f5f5f5;}
-#tabModule ul.nav-tabs li.active a { background: #f5f5f5; border: none; border-bottom: 3px solid #6e8e2d; color: #6e8e2d;}
+#tabModule-Menu > ul.nav-tabs { width: 100%; border-bottom: 0;}
+#tabModule-Menu > ul.nav-tabs li a { border: none; border-bottom: 3px solid #cbcbcb; color: #4f4f4f; font-weight: 700; text-align: left;}
+#tabModule-Menu > ul.nav-tabs li a:hover { background:#f5f5f5;}
+#tabModule-Menu > ul.nav-tabs li.active a { background: #f5f5f5; border: none; border-bottom: 3px solid #6e8e2d; color: #6e8e2d;}
 
 .descriptionSmall { color: #929292; font-size: 0.85em; font-weight: 300;}
