--- a/views/simpleCourse/tab1.html
+++ b/views/simpleCourse/tab1.html
@@ -3,41 +3,49 @@
     <div class="col-xs-12">
         <div class="row" ng-controller="aPiFake">
 
-            <div id="tabModule" ng-init="activeValue=true"  description-tab description="{{dataSimpleCourse.course.name | lowercase}}">
-                <tabset justified="true">
-                    <tab ng-repeat="item in dataFake" heading="{{item.name}}" active="item.active">
+            <div id="tabModule" description-tab description-active="true" description="{{dataSimpleCourse.course.name | lowercase}}">
+                <tabset justified="true" id="tabModule-Menu">
+                    <tab ng-repeat="item in dataFake" heading="{{item.name}}" active="$first">
+
                         <!-- Controlador progreso lección -->
-                                                <div class="col-xs-12 list-simple">
-                                                    <ul class="nav nav-pills nav-pills--setps nav-justified" style="margin-top: 15px; margin-bottom: 15px;">
-                                                        <li class="visited active">
-                                                            <a href="#leccion1-step1" aria-controls="leccion1-step1" role="tab" data-toggle="tab"></a>
-                                                        </li>
-                                                        <li class="visited">
-                                                            <a href="#leccion1-step2" aria-controls="leccion1-step1" role="tab" data-toggle="tab"></a>
-                                                        </li>
-                                                        <li class="visited">
-                                                            <a href="#leccion1-step3" aria-controls="leccion1-step1" role="tab" data-toggle="tab"></a>
-                                                        </li>
-                                                        <li class="visited">
-                                                            <a href="#leccion1-step4" aria-controls="leccion1-step1" role="tab" data-toggle="tab"></a>
-                                                        </li>
-                                                        <li class="visited">
-                                                            <a href="#leccion1-step5" aria-controls="leccion1-step1" role="tab" data-toggle="tab"></a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#leccion1-step6" aria-controls="leccion1-step1" role="tab" data-toggle="tab"></a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#leccion1-step7" aria-controls="leccion1-step1" role="tab" data-toggle="tab"></a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#leccion1-step8" aria-controls="leccion1-step1" role="tab" data-toggle="tab"></a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#leccion1-step9" aria-controls="leccion1-step1" role="tab" data-toggle="tab"></a>
-                                                        </li>
-                                                    </ul>
+                            <div class="col-xs-12 list-simple">
+
+                                <!-- Tabs Simple Content  / ver directiva -->
+                
+                                <tabs-custom-horizontal>
+
+                                    <!-- content of content from submodule -->
+                                    <div class="col-md-8">
+                                        contenido 1.{{$index}}
+                                    </div>
+
+                                    <div class="col-md-4 sidebar-right text-center">
+                                          <p class="text text--lite text--gris margin--b1 margin--t05 text--xbold"> Progreso Lección 1 </p>
+
+                                            <div class="c100 center p50 center-block">
+                                                <span>50%</span>
+                                                <div class="slice">
+                                                    <div class="bar"></div>
+                                                    <div class="fill"></div>
                                                 </div>
+                                            </div>
+
+                                            <div class="clearfix"></div>
+
+                                            <p class="text text--lite text--gris text--upper margin--b0 margin--t2"> Puntos de marketing ninja: </p>
+                                            <p class="text text--xbold text--xxlg text--gris text--upper margin--b0 margin--t0"> 80 </p>
+
+                                            <div class="clearfix"></div>
+
+                                            <a class="btn btn-verde btn-lg margin--t1 typeform-share" href="https://andresescobar.typeform.com/to/emTKCV" data-mode="1" target="_blank">
+                                                Realizar Evaluación
+                                            </a>
+                                            <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+                                    </div>
+
+                                </tabs-custom-horizontal>
+
+                            </div>
                     </tab>
                 </tabset>
             </div>
