--- a/views/simpleCourse/tab1.html
+++ b/views/simpleCourse/tab1.html
@@ -12,38 +12,7 @@
 
                                 <!-- Tabs Simple Content  / ver directiva -->
                 
-                                <tabs-custom-horizontal>
-
-                                    <!-- content of content from submodule -->
-                                    <div class="col-md-8">
-                                        contenido 1.{{$index}}
-                                    </div>
-
-                                    <div class="col-md-4 sidebar-right text-center">
-                                          <p class="text text--lite text--gris margin--b1 margin--t05 text--xbold"> Progreso Lección 1 </p>
-
-                                            <div class="c100 center p50 center-block">
-                                                <span>50%</span>
-                                                <div class="slice">
-                                                    <div class="bar"></div>
-                                                    <div class="fill"></div>
-                                                </div>
-                                            </div>
-
-                                            <div class="clearfix"></div>
-
-                                            <p class="text text--lite text--gris text--upper margin--b0 margin--t2"> Puntos de marketing ninja: </p>
-                                            <p class="text text--xbold text--xxlg text--gris text--upper margin--b0 margin--t0"> 80 </p>
-
-                                            <div class="clearfix"></div>
-
-                                            <a class="btn btn-verde btn-lg margin--t1 typeform-share" href="https://andresescobar.typeform.com/to/emTKCV" data-mode="1" target="_blank">
-                                                Realizar Evaluación
-                                            </a>
-                                            <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
-                                    </div>
-
-                                </tabs-custom-horizontal>
+                                <tabs-custom-horizontal></tabs-custom-horizontal>
 
                             </div>
                     </tab>
