--- a/views/courseDetail.html
+++ b/views/courseDetail.html
@@ -66,7 +66,6 @@
             <h3 class="text text--md text--xbold margin--b1 text-space1 margin--t1">
                 Profesores:
             </h3>
-
             <div class="row" ng-repeat="tutorData in dataDetails.tutors">
                 <div class="col-xs-2 vertical-middle">
                     <img ng-src="{{tutorData.avatar}}" alt="" class="img-circle sidebar-imageCurso__image img-responsive">
@@ -78,7 +77,7 @@
                     <p class="text text--gris text--sm margin--t0"> {{tutorData.jobtitle}}</p>
                 </div>
                 <div class="col-xs-12">
-                    <p class="text text--gris text--lite"> {{tutorData.about}} </p>
+                    <p class="text text--gris text--lite">{{tutorData.about}} </p>
                 </div>
             </div>
         </div>
@@ -87,7 +86,9 @@
                 Sesiones
             </h3>
             <div class="form-group">
-                <select class="form-control" ng-model="initial_dates" ng-options="item for item in dataSessionDates"></select>
+                <select class="form-control" ng-model="initial_dates" ng-options="item['dates'] for item in dataSessionDates">
+                    <option value="">Seleccione una sesión</option>
+                </select>
             </div>
 
             <div class="clearfix"></div><hr class="sep sep--gris sep--xs">
@@ -97,11 +98,7 @@
                     Duración:
                 </p>
             </div>
-            <div class="col-xs-6">
-                <p class="text text--gris text--lite text--xs">
-                    4 Semanas
-                </p>
-            </div>
+            <c-duration data="{{dataSessionDates[0]}}" details="1" class="text--gris text--xs text text--lite"></c-duration>
             
             <div class="clearfix"></div><hr class="sep sep--gris sep--xs">
 
@@ -111,7 +108,7 @@
                 </p>
             </div>
             <div class="col-xs-6">
-                <p class="text text--gris text--lite text--xs">
+                <p class="text text--gris text--lite text--xs" id="time-on-week">
                     6 -8 Horas
                 </p>
             </div>
@@ -139,6 +136,9 @@
             <h3 class="text text--azul_osc text--lg text--xbold text-space1 margin--t1">
                 Lo que dice la gente
             </h3>
+            <div ng-controller="comments">
+                <comments-on-course data="{{commentsForCourse}}"></comments-on-course>
+            </div>
         </div>
         <div class="clearfix"></div><hr class="sep sep--gris sep--lg">
         <div class="col-xs-12">
