--- a/views/simpleCourse/tab1.html
+++ b/views/simpleCourse/tab1.html
@@ -3,14 +3,14 @@
     <div class="col-xs-12">
         <div class="row">
 
-            <div id="tabModule" description-tab description-active="true" description="{{dataSimpleCourse.course.name | lowercase}}">
+            <div id="tabModule" description-tab description="{{dataSimpleCourse.course.name | lowercase}}">
                     
                 <!-- carousell -->   
                 
                 <carousel interval="intervalTime" class="carousel--tabsDetalle">
                     <slide ng-repeat="slide in simpleItems" active="slide.active">
-                        <tabset justified="true" id="tabModule-Menu">
-                            <tab ng-repeat="item in slide" heading="{{item.module_name}}" active="$first">
+                        <tabset justified="true" id="tabModule-Menu" class="description-module">
+                            <tab ng-repeat="item in slide" heading="{{item.module_name | words:7 }}" active="$first">
 
                                 <!-- Controlador progreso lección -->
                                 <div class="col-xs-12 list-simple">
