and video and html

--- a/views/simpleCourse/tab1.html
+++ b/views/simpleCourse/tab1.html
@@ -17,6 +17,7 @@
 
                                     <!-- Tabs Simple Content  / ver directiva -->
 
+
                                     <tabs-custom-horizontal></tabs-custom-horizontal>
 
                                 </div>
@@ -29,3 +30,17 @@
         </div>
     </div>
 </div>
+
+
+<!--template para las modales-->
+<script type="text/ng-template" id="myModalTest.html">
+    <div class="modal-header">
+        <h3 class="modal-title">Evaluación</h3>
+    </div>
+    <div class="modal-body">
+        <div>
+            {{text2}}
+        </div>
+    </div>
+</script>
+<!--./template para las modales-->
