--- a/css/main.css
+++ b/css/main.css
@@ -808,3 +808,7 @@ body{font-family:'Raleway',sans-serif;font-size:16px;margin:0;overflow-x:hidden;
 #tabModule-Menu > ul.nav-tabs li.active a { background: #f5f5f5; border: none; border-bottom: 3px solid #6e8e2d; color: #6e8e2d;}
 
 .descriptionSmall { color: #929292; font-size: 0.85em; font-weight: 300;}
+
+iframe {height:370px !important; width:100% !important;}
+
+.carousel-indicators {display:none !important;}
