--- a/views/simpleCourse/tab2.html
+++ b/views/simpleCourse/tab2.html
@@ -7,6 +7,8 @@
     </h1>
 
     <p class="text text--gris_osc">
+        {{dataSimpleCourse.course.description}}
+        <hr>
         En un mundo cada vez más digital, los profesionales en mercadeo, comunicaciones y empresarios tienen el gran reto de integrar
         los medios digitales a su estrategia global de negocio y para lograrlo deben tener clara la ruta que deben seguir para realmente
         aportar al cumplimiento general de los objetivos estratégicos de sus compañías.<br><br>
